<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:id="@+id/parentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--for showing loading-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="?attr/colorSurface"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextAppearance.WeChat.Headline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="50dp"
                        android:text="@string/sign_up"
                        android:textAllCaps="true"
                        android:textColor="?attr/colorSecondary" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        app:hintTextColor="@color/primary_500">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameEditText"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="?attr/colorSurface"
                            android:drawableStart="@drawable/ic_person_black_24dp"
                            android:drawablePadding="8dp"
                            android:drawableTint="?attr/colorPrimary"
                            android:fontFamily="@font/roboto_regular"
                            android:hint="@string/enter_your_user_name"
                            android:inputType="textEmailAddress"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginTop="30dp"
                        app:hintTextColor="@color/primary_500">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailEditText"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="?attr/colorSurface"
                            android:drawableStart="@drawable/ic_email_black_24dp"
                            android:drawablePadding="8dp"
                            android:drawableTint="?attr/colorPrimary"
                            android:fontFamily="@font/roboto_regular"
                            android:hint="@string/login_email_edit_text_hint"
                            android:inputType="textEmailAddress"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginTop="30dp"
                        app:hintTextColor="@color/primary_500"
                        app:layout_constraintTop_toBottomOf="@id/email"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="?attr/colorSurface"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="8dp"
                            android:drawableTint="?attr/colorPrimary"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/login_password_edit_text_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/email"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordConfirmEditText"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="?attr/colorSurface"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="8dp"
                            android:drawableTint="?attr/colorPrimary"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/confirm_password_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/registerButton"
                        style="@style/Theme.WeChat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="25dp"
                        android:text="@string/register" />
                </LinearLayout>

                <View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/social_login"
                    app:layout_constraintBottom_toTopOf="@+id/facebookLoginFragment"
                    app:layout_constraintEnd_toStartOf="@+id/view5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/view4" />


                <fragment
                    android:id="@+id/facebookLoginFragment"
                    android:name="com.example.wechat.ui.fbLoginFragment.FacebookLoginFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toTopOf="@id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="Instantiatable,TouchTargetSizeCheck"
                    tools:layout="@layout/facebook_login_fragment" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/new_user"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/gotoSignUpFragmentTextView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/gotoSignUpFragmentTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/blue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/loadingLayout"
                layout="@layout/loading"
                android:visibility="gone" />

            <!--for showing if there any issue-->
            <include
                android:id="@+id/issueLayout"
                layout="@layout/issue_layout"
                android:visibility="gone" />
        </FrameLayout>
    </ScrollView>
</layout>
