<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <ScrollView android:id="@+id/parentScroll"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="?attr/colorSurface"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:layout_gravity="center_horizontal"
                            android:textAllCaps="true"
                            android:textColor="?attr/colorSecondary"
                            android:layout_marginBottom="60dp"
                            style="@style/TextAppearance.WeChat.Headline3"/>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextColor="@color/primary_500"
                            android:layout_marginHorizontal="4dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/emailEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:backgroundTint="?attr/colorSurface"
                                android:drawableStart="@drawable/ic_email_black_24dp"
                                android:drawableTint="?attr/colorPrimary"
                                android:drawablePadding="8dp"
                                android:hint="@string/login_email_edit_text_hint"
                                android:inputType="textEmailAddress"
                                android:textSize="16sp"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            app:hintTextColor="@color/primary_500"
                            android:layout_marginHorizontal="4dp"
                            app:layout_constraintTop_toBottomOf="@id/email"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/passwordEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/ic_lock"
                                android:backgroundTint="?attr/colorSurface"
                                android:drawablePadding="8dp"
                                android:gravity="center_vertical"
                                android:drawableTint="?attr/colorPrimary"
                                android:hint="@string/login_password_edit_text_hint"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:fontFamily="@font/roboto_regular"
                                android:singleLine="true"
                                android:textSize="16sp"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/loginButton"
                            style="@style/Theme.WeChat.Button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="40dp"
                            android:text="@string/login"
                            tools:ignore="DuplicateSpeakableTextCheck" />
                    </LinearLayout>

                    <View
                        android:id="@+id/view5"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:background="@color/grey"
                        app:layout_constraintBottom_toBottomOf="@+id/textView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toTopOf="@+id/textView4" />

                    <View
                        android:id="@+id/view4"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:background="@color/grey"
                        app:layout_constraintBottom_toBottomOf="@+id/textView4"
                        app:layout_constraintEnd_toStartOf="@+id/textView4"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/social_login"
                        app:layout_constraintBottom_toTopOf="@+id/facebookLoginFragment"
                        app:layout_constraintEnd_toStartOf="@+id/view5"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/view4" />


                    <fragment
                        android:id="@+id/facebookLoginFragment"
                        android:name="com.example.wechat.ui.fbLoginFragment.FacebookLoginFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:minHeight="48dp"
                        app:layout_constraintBottom_toTopOf="@id/textView3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="Instantiatable,TouchTargetSizeCheck"
                        tools:layout="@layout/facebook_login_fragment" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/new_user"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/gotoSignUpFragmentTextView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/gotoSignUpFragmentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/blue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView3" />

<!--                    <androidx.constraintlayout.widget.Guideline-->
<!--                        android:id="@+id/guideline"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="horizontal"-->
<!--                        app:layout_constraintGuide_begin="34dp" />-->

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/login"
                        android:textColor="?attr/colorPrimary"
                        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
                        app:layout_constraintBottom_toTopOf="@+id/linear"
                        app:layout_constraintStart_toStartOf="@+id/linear" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--for showing loading-->
                <include
                    android:id="@+id/loadingLayout"
                    layout="@layout/loading"
                    android:visibility="gone" />

                <!--for showing if there any issue-->
                <include
                    android:id="@+id/issueLayout"
                    layout="@layout/issue_layout"
                    android:visibility="gone" />
            </FrameLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>





